Fixed bug #71249 (ldap_mod_replace/ldap_mod_add store value as string "Array")